update wk09 wave image with amplitude

--- a/WK09.ipynb
+++ b/WK09.ipynb
@@ -6,7 +6,7 @@
         "id": "QshK8s21WBrf"
       },
       "source": [
-        "# Week 09 : thiago"
+        "# Week 09"
       ]
     },
     {
@@ -85,7 +85,7 @@
       "source": [
         "### Loading an audio file for analysis, manipulation, etc\n",
         "\n",
-        "is a bit more work"
+        "is a bit more work. The Python [wave module](https://docs.python.org/3/library/wave.html) helps a lot, but there are still some steps that we have to take."
       ]
     },
     {
@@ -113,7 +113,9 @@
         "\n",
         "`Channels`: The different signals that make up an audio file.\n",
         "\n",
-        "`Samples`: List of numbers that represent the quantized amplitude of an audio signal.\n",
+        "`Amplitude`: The strength of the audio signal. Related to volume.\n",
+        "\n",
+        "`Samples`: List of numbers that represent the amplitude of an audio signal at specific time intervals.\n",
         "\n",
         "`Frame`: Collection of samples from all channels at a given time. $Number\\ of\\ Frames = \\frac{Number\\ of\\ Samples}{Number\\ of\\ Channels}$\n",
         "\n",
@@ -192,9 +194,22 @@
         "\n",
         "Argh!\n",
         "\n",
-        "We can give `Audio()` every other sample to listen to just one of the channels:\n",
-        "<br>`display(Audio(my_samples[::2], rate=44100))`\n",
-        "\n",
+        "We can give `Audio()` every other sample and listen to just one of the channels:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "display(Audio(my_samples[::2], rate=44100))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "But, it's better to use a function to read our wave files and return a single-channel array that combines all of the channels in an audio file."
       ]
     },
