--- a/WK09.ipynb
+++ b/WK09.ipynb
@@ -132,9 +132,7 @@
         "\n",
         "We first have to open a `.wav` file with `wave.open()` to get a file object.\n",
         "\n",
-        "We then use the file object `wav_in` to read the file's contents into a buffer of `bytes` with the `wav_in.readframes()` function.\n",
-        "\n",
-        "We use the `frombuffer()` function to turn `bytes` into `integers`.\n",
+        "We can then use the file object's `readframes()` function to read the file's contents into a buffer of `bytes`, and the `frombuffer()` function to turn a buffer of `bytes` into a list of `integers`.\n",
         "\n",
         "And, finally, we can use `list()` to put it all inside a regular Python list.\n",
         "\n",
@@ -384,7 +382,7 @@
         "B = [20,21,22,23,24]\n",
         "```\n",
         "\n",
-        "then, `zip(A,B)` will give us this:\n",
+        "then, `zip(A,B)` will give us this list:\n",
         "```python\n",
         "[(10,20), (11,21), (12,22), (13,23), (14,24)]\n",
         "```\n",
@@ -627,7 +625,7 @@
       "source": [
         "img_pixels = list(mimg.getdata())\n",
         "\n",
-        "print(len(img_pixels))\n",
+        "print(mimg.size, len(img_pixels))\n",
         "print(img_pixels[0])"
       ]
     },
@@ -868,7 +866,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.1.0"
     },
     "vscode": {
       "interpreter": {
