add equations to audio definitions

--- a/WK09.ipynb
+++ b/WK09.ipynb
@@ -109,7 +109,7 @@
         "\n",
         "<img src=\"./imgs/audio-01.jpg\" width=\"720px\">\n",
         "\n",
-        "`Audio length`: The duration of an audio file in seconds.\n",
+        "`Audio length`: The duration of an audio file in seconds. $Audio\\ Length = \\frac{Number\\ of\\ Samples}{Sample\\ Rate}$\n",
         "\n",
         "`Channels`: The different signals that make up an audio file.\n",
         "\n",
